# ros-backend

./: .dockerignore  .flake8  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  Makefile  Pipfile  README.md  app.py  build_deploy.sh  cdappconfig.json  clowdapp.yaml  deployment.yaml  gunicorn.conf.py  local-ros-backend.js  manage.py  pr_check.sh  pyproject.toml  pytest.ini  renovate.json  run.py  run_org_id_populator.yaml  seed.py
.github/: pull_request_template.md
.github/workflows/: build.yml  build_with_latest_direct_deps.yml  build_with_latest_indirect_deps.yml  codeql.yml  security-scanning.yml
.tekton/: ros-backend-jun28-pull-request.yaml  ros-backend-jun28-push.yaml  ros-backend-pull-request.yaml  ros-backend-push.yaml  ros-backend-sc-pull-request.yaml  ros-backend-sc-push.yaml
.unleash/: bootstrap.json
ansible-playbooks/: README.md  ros_disable.yml  ros_disable_and_clean_up.yml  ros_disable_only.yml  ros_install_and_set_up.yml
dashboards/: grafana-dashboard-insights-ros-general.configmap.yaml
docs/: db_schema.puml  ros_sequence.puml
migrations/: env.py  session_helpers.py
migrations/versions/: 0158f7c00beb_.py  015d7d1fea52_update_performance_profile_table.py  020def9f5b94_.py  0cc86f3e4037_.py  1051e0d7e62e_update_default_value_for_group_column.py  17a0c64e29e0_drop_columns_from_systems_.py  221edcc12d5c_.py  23d9d980a813_delete_existing_historical_records_from_PP.py  26a16593ec96_remove_columns_from_systems.py  290a91f4eff6_.py  29bd24943ac5_insert_existing_historical_records_to_PPH_.py  2de83544215a_.py  331c56fed399_.py  37ef515b370d_.py  397d8c6c506a_rename_performance_score_column.py  3d3a1981593c_populate_fields_from_systems_to_.py  3fb61393a227_added_psi_enabled.py  42ae31e22f84_add_indices_on_system_recommendation_.py  457844090fad_set_keys_on_performance_profile_history.py  52381cafc36f_add_created_at_field_to_rh_accounts.py  52381cafc36f_add_timestamp_fields_to_rh_accounts.py  5c21ad23b0f7_.py  5e5c57ed6627_.py  605a688d0cd2_.py  6e4bdd2d0450_.py  744789bd2451_.py  77a3ca142468_.py  77fdc857c94f_alter_pk_on_performance_profile.py  (+25 more)
ros/: .env.example  app.py  config.py  extensions.py  models.py  utils.py
saas-templates/: _imagestreams.yaml  ros-backend.yaml  ros-db.yaml  ros-processor.yaml
sample-files/: api_message.json  delete_system_message.json  events-message.json  insights-engine-result-idle-old.json  insights-engine-result-idle.json  insights-engine-result-no-pcp.json  insights-engine-result-optimized.json  insights-engine-result-undersized.json  insights-engine-result.json  no_pcp_raw_message.json  sample-substates.json
scripts/: .env  .env-minio  README.md  cdappconfig.json  docker-compose.yml  prometheus.yml
seed.d/: rules.json
tests/: README_RULES_ENGINE_TESTS.md  conftest.py  test_api_endpoints.py  test_archive_processor.py  test_cache_utils.py  test_garbage_collector.py  test_insights_engine_result_consumer.py  test_inventory_events_consumer.py  test_recommendations.py  test_report_processor_consumer.py  test_rules_engine.py  test_rules_engine_integration.py  test_suggestions_engine.py  test_system_eraser.py  test_utils.py
(+120 files in other folders)
