[tool.poetry]
name = "ros-backend"
version = "2.4.0"
description = "Backend for Resource Optimization"
readme = "README.md"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
Flask = "~=2.2.5"
gunicorn = "~=20.0.4"
flask-restful = "~=0.3.8"
Flask-SQLAlchemy = "~=3.0.3"
sqlalchemy = "~=2.0"
psycopg2-binary = "^2.9.9"
flask-migrate = "~=4.0.4"
flask-cors = "~=3.0.9"
confluent-kafka = "^2.0.2"
requests = "~=2.31.0"
insights-core = "~=3.0.265"
pydash = "~=4.9.2"
app-common-python = "~=0.2.5"
prometheus-client = "~=0.11.0"
prometheus-flask-exporter = "~=0.22.3"
pyyaml = "*"
watchtower = ">=1.0.0"
boto3 = ">=1.16.13"
botocore = ">=1.19.13"
flask-caching = "^2.0.2"
flask-unleash = "^2.0.0"
werkzeug = "<4.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "~=7.2.0"
sqlalchemy-utils = "*"
pytest-mock = "*"
pytest-cov = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
