[tool.poetry]
name = "ros"
version = "2.4.0"
description = "Backend for Resource Optimization"
authors = []

[tool.poetry.dependencies]
python = "^3.11"
Flask = "~=3.1.1"
gunicorn = "~=23.0.0"
flask-restful = "~=0.3.8"
Flask-SQLAlchemy = "~=3.1.1"
sqlalchemy = "~=2.0"
psycopg2 = "^2.9.9"
flask-migrate = "~=4.1.0"
flask-cors = "~=6.0.0"
confluent-kafka = "^2.0.2"
requests = "~=2.32.4"
insights-core = "~=3.6.7"
pydash = "~=8.0.5"
app-common-python = "~=0.2.5"
prometheus-client = "~=0.23.1"
prometheus-flask-exporter = "~=0.23.1"
pyyaml = "*"
watchtower = ">=1.0.0"
boto3 = ">=1.36.21"
botocore = ">=1.36.21"
flask-caching = "^2.0.2"
flask-unleash = "^2.0.0"
werkzeug = "<4.0.0"
logstash_formatter = "^0.5.17"
tenacity = "^9.0.0"
grpcio = "^1.73.1"
kessel-sdk = {extras = ["auth"], version = "^1.5.0"}

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "~=8.4.2"
sqlalchemy-utils = "*"
pytest-mock = "*"
pytest-cov = "*"
pytest_mock_resources = "*"
python-on-whales = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
